Fixed fixed (sup dawg) banner overlapping content

--- a/app/assets/stylesheets/application/_common.css.scss
+++ b/app/assets/stylesheets/application/_common.css.scss
@@ -139,7 +139,7 @@ small {
 }
 
 [role=content] {
-  padding: 20px $banner_link_padding_lr 40px;
+  padding: $banner_top_padding $banner_link_padding_lr 40px;
 
   .wrap.expanded & {
     padding-left:  20px;
